# mau

./: .coveragerc  .gitignore  COPYING  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  index.rst  readme.md  readme.rst  source_str.rst  utilities.rst
docs/source/config_parser/: declarative.rst  example.rst.inc  index.rst
docs/source/reference/: config_parser.md  index.md  index.rst  myst_docstr.md  source_str.md
docs/source/reference/config_parser/: declarative.md  example.rst.inc  extend_declarative.md  extend_declarative.rst  index.md  low_level.md  low_level.rst  values.rst
docs/source/task_loop/: context.rst  event.rst  index.rst  logging.rst  priority.rst  process.rst  task.rst
src/yosys_mau/: config_parser.py  myst_docstr.py  stable_set.py
src/yosys_mau/config_parser/: __init__.py  _commands.py  _low_level.py  _options.py  _sections.py  _values.py
src/yosys_mau/helpers/: preexec_wrapper.py
src/yosys_mau/source_str/: __init__.py  re.py  report.py
src/yosys_mau/task_loop/: .gitignore  __init__.py  _task.py  context.py  job_server.py  job_server_helper.py  logging.py  preexec_wrapper.c  preexec_wrapper.py  priority.py  process.py
tests/: test_config_parser.py  test_source_str.py  test_stable_set.py  test_utils.py
tests/config_parser/: test_command_parser.py  test_config_parser.py  test_config_parser_example.py  test_options_parser.py  test_split_into_commands.py  test_split_into_sections.py  test_value_parser.py
tests/task_loop/: test_context_vars.py  test_jobserver.py  test_logging.py  test_process_task.py  test_task_loop.py
