[project]
name = "yosys_mau"
version = "0.0.1"
description = "Modular application utilities for Yosys frontends"

[project.optional-dependencies]
dev = [
    # Documentation
    "sphinx",
    "furo",
    "myst_parser",

    # Testing
    "pytest",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "hypothesis",

    # Formatting
    "black",

    # Linting
    "ruff",

    # Type checking
    "pyright",
    "types-docutils",
]


[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

select = ["E", "F", "I"]
fixable = [
    "I",    # Import order
    "F401", # Imported but unused
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

filterwarnings = [ # Remove this once https://github.com/pytest-dev/pytest-cov/issues/557 hits a pytest-cov release
    "error",
    "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning",
]

[tool.pyright]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Essentially strict mode but as warnings instead of errors, this also allows
# us to exclude some reports project-wide which strict mode doesn't allow.
reportConstantRedefinition = "warning"
reportDeprecated = "warning"
reportDuplicateImport = "warning"
reportFunctionMemberAccess = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "warning"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportOverlappingOverload = "warning"
reportTypeCommentUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
reportPrivateUsage = "warning"
